--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 .playArea {
-    background-color: #9A8A96;
+    background-color: lightgray; 
+    /* #9A8A96 */
     width: 600px;
     border-radius: 10px;
     filter: drop-shadow(0 1mm 2mm rgb(0, 0, 0));
     display: grid;
-    grid-template-columns: 100px auto 100px 1fr;
+    grid-template-columns: 120px auto 120px ;
+    align-content: center;
+    
 
     
 }
@@ -12,11 +15,19 @@
 .statusArea {
     display: flex;
     flex-direction: column;
-    
+    margin-left: 10px;
     justify-content: center;
+    font-weight: bold;
+
+    
 
 }
-
+.hungerStat {
+    font-size: large;
+    font-weight: bolder;
+    
+    
+}
 
 
 .nameArea {
@@ -31,21 +42,71 @@
 
 
 }
+.submitButton {
+    width: 100px;
+}
 .startButton {
     width: 100px;
+    border-radius: 7px;  
+}
+
+.startButtonBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+
+}
+#form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    border-style: solid;
+    border-color: darkgray;
+    border-radius: 7px;
+    column-gap: 20px;
+    margin-bottom: 30px;
+
+
+}
+
+.img {
+    border-radius: 40px;
+    border-style: solid;
+    border-color: #62415a;
     
 }
 
-#form {
-    text-align: center;
-
-
+.ageStat {
+    margin-top: -40px;
+    color:aliceblue;
 }
-
-
+h2 {
+    margin-top: -40px;
+    margin-left: -30px;
+    color:aliceblue;
+}
 .userButtons {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 20px;
+    margin: 0 auto;
     
+}
+.feedButton {
+    border-radius: 7px;
+}
+.lightsButton {
+    border-radius: 7px;
+}
+.playButton {
+    border-radius: 7px;
+}
+
+.deathMessage {
+    margin-top: -70px;
+    font-weight: bolder;
 }
