--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@
     
     
 }
+.sleepyStat {
+    font-size: large;
+    font-weight: bolder;
+}
+
+.boredomStat {
+    font-size: large;
+    font-weight: bolder;
+}
 
 
 .nameArea {
@@ -69,6 +78,7 @@
     border-radius: 7px;
     column-gap: 20px;
     margin-bottom: 30px;
+    height: 37px
 
 
 }
@@ -113,4 +123,7 @@ h2 {
     height: 25px;
     margin-top: -70px;
     font-weight: bolder;
+}
+.nameDisplay {
+    
 }
